--- a/UI/Views/Products/Details.cshtml
+++ b/UI/Views/Products/Details.cshtml
@@ -290,11 +290,11 @@
                                             <div class="product-seller-row guarantee">
                                                 <span class="title mt-3"> تعداد:</span>
                                                 <div class="quantity pl">
-                                                    <input type="number" min="1" max="100" step="1" value="1"><div class="quantity-nav"><div class="quantity-button quantity-up">+</div><div class="quantity-button quantity-down">-</div></div>
+                                                    <input type="number" min="1" max="100" step="1" value="1" id="Count"><div class="quantity-nav"><div class="quantity-button quantity-up">+</div><div class="quantity-button quantity-down">-</div></div>
                                                 </div>
                                             </div>
                                             <div class="product-seller-row add-to-cart">
-                                                <a href="" class="btn-add-to-cart btn btn-primary">
+                                                <a onclick="AddToCart(@Model.Id)" href="" class="btn-add-to-cart btn btn-primary">
                                                     <span class="btn-add-to-cart-txt">افزودن به سبد خرید</span>
                                                 </a>
                                             </div>
@@ -796,5 +796,48 @@
 {
     <script src="~/assets/js/vendor/lightgallery-all.js"></script>
     <script src="~/assets/js/vendor/jquery.ez-plus.js"></script>
+    <link href="~/assets/Sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+    <script src="~/assets/Sweetalert2/sweetalert2.min.js"></script>
+    <script>
+        function AddToCart(ProductId){
+            const xhr = new XMLHttpRequest();
+            // Initialize the request
+            xhr.open("POST", '/Cart/AddToCart');
+            // Set content type
+            xhr.setRequestHeader('Content-type', 'application/json; charset=UTF-8');
+            // Send the request with data to post
+            xhr.send(
+                JSON.stringify({
+                    ProductId: ProductId,
+                    Count: document.getElementById('Count').value
+                })
+            );
+
+            xhr.onload = function (e) {
+                // Check if the request was a success
+                if (this.readyState === XMLHttpRequest.DONE) {
+                    // Get and convert the responseText into JSON
+                    let response = JSON.parse(xhr.responseText)
+                    if (response.isSuccess == false) {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'خطا',
+                            text: response.message
+                        })
+                    }
+                    else {
+                        Swal.fire(
+                            'موفق',
+                            'محصول به سبد خرید افزوده شد',
+                            'success'
+                        ).then(() => {
+                            document.location.reload()
+                        })
+                        
+                    }
+                }
+            }
+        }
+    </script>
 }
 
