--- a/UI/Views/Address/Add.cshtml
+++ b/UI/Views/Address/Add.cshtml
@@ -145,7 +145,7 @@
                             'آدرس جدید افزوده شد',
                             'success'
                         ).then(() => {
-                            //document.location.reload()
+                            document.location = "/order"
                         })
 
                     }
