--- a/UI/Views/Order/Index.cshtml
+++ b/UI/Views/Order/Index.cshtml
@@ -25,6 +25,43 @@
                     }
                 </div>
             </div>
+
+            <div class="m-5" >
+                <p class="text-primary h5">شیوه ارسال</p>
+
+                <div class="d-flex justify-content-between align-items-center my-3">
+                    <div class="form-check ">
+                        <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label mr-3  text-info" for="flexRadioDefault1">
+                            پیک فروشگاه
+                        </label>
+                    </div>
+                    <p class="text-dark pt-3">50,000</p>
+                </div>
+                
+                <div class="d-flex justify-content-between align-items-center my-3">
+                    <div class="form-check">
+                        <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                        <label class="form-check-label mr-3 text-info" for="flexRadioDefault2">
+                            تیپاکس
+                        </label>
+                    </div>
+                    <p class="text-dark pt-3">50,000</p>
+
+                </div>
+                
+                <div class="d-flex justify-content-between align-items-center my-3">
+                    <div class="form-check">
+                        <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
+                        <label class="form-check-label mr-3  text-info" for="flexRadioDefault2">
+                            پست پیشتاز
+                        </label>
+                    </div>
+                    <p class="text-dark pt-3">50,000</p>
+
+                </div>
+                
+            </div>
         </div>
     </div>
 </div>
