--- a/UI/Views/Cart/Index.cshtml
+++ b/UI/Views/Cart/Index.cshtml
@@ -151,7 +151,7 @@
                                             </div>
                                             <div class="col-md-2 pl mt-5">
                                                 <div class="proceed-to-checkout">
-                                                    <a href="#" class="checkout-button d-block">
+                                                    <a href="/Order" class="checkout-button d-block">
                                                         تسویه
                                                         حساب
                                                     </a>
