--- a/UI/Views/Order/Index.cshtml
+++ b/UI/Views/Order/Index.cshtml
@@ -33,7 +33,7 @@
                 {
                     <div class="d-flex justify-content-between align-items-center my-3">
                         <div class="form-check ">
-                            <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                            <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="Express">
                             <label class="form-check-label mr-3  text-info" for="flexRadioDefault1">
                                 پیک فروشگاه
                             </label>
@@ -44,29 +44,42 @@
 
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div class="form-check">
-                        <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                        <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="Tipax">
                         <label class="form-check-label mr-3 text-info" for="flexRadioDefault2">
                             تیپاکس
                         </label>
                     </div>
-                    <p class="text-dark pt-3">50,000</p>
+                    <p class="text-dark pt-3">پس کرایه</p>
 
                 </div>
                 
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div class="form-check">
-                        <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
-                        <label class="form-check-label mr-3  text-info" for="flexRadioDefault2">
+                        <input class="form-check-input mt-2" type="radio" name="flexRadioDefault" id="Post" checked>
+                        <label class="form-check-label mr-3  text-info" for="flexRadioDefault3">
                             پست پیشتاز
                         </label>
                     </div>
-                    <p class="text-dark pt-3">50,000</p>
+                    <p class="text-dark pt-3">@ViewBag.PostDeliveryCost</p>
 
                 </div>
                 
+            </div>
+
+            <div class="d-flex align-items-center justify-content-between">
+                <button onclick="Submit()" class="btn btn-success mx-auto">ادامه</button>
             </div>
         </div>
     </div>
 </div>
 
 
+@section Script{
+    <script>
+        function Submit() {
+            var DeliveryType = document.querySelector("input:checked").id
+
+            location.href = `/Order/Submit?DeliveryType=${DeliveryType}`
+        }
+    </script>
+}
