--- a/UI/Views/Shared/Components/GetCart/GetCart.cshtml
+++ b/UI/Views/Shared/Components/GetCart/GetCart.cshtml
@@ -69,7 +69,7 @@
                     </div>
                     <div class="mini-card-button">
                         <a href="/cart" class="view-card">مشاهده سبد خرید</a>
-                        @*                    <a href="checkout.html" class="card-checkout">تسویه حساب</a>*@
+                        <a href="/Order" class="card-checkout">تسویه حساب</a>
                     </div>
                 </div>
             </div>
