--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/responsive.css">
 
-    @RenderSection("Css",false);
+    @RenderSection("Css",false)
 </head>
 
 <body>
